src/styles/home.module.css
.header {
    padding-bottom: none;
    display: flex;
    min-height: 100vh;
    margin-left: 10px;
    position: relative;
    justify-content: center;
    flex-direction: column;
  }
  
  @media (max-width: 480px) and (min-height: 700px) {
   .header{
    padding-bottom: 10vh;
   }
  }

  .header h3 {
    font-weight: 500;
    color: var(--primary-light);
    margin: 0;
    font-size : clamp(30px, 6vw, 60px);
  }

  .bigH{
    margin: 0;
    font-size : clamp(40px, 6vw, 80px);
  }
  .btnwrapper{
    display: flex;
  }
  @media(max-width: 320px){
    .btnwrapper{
      flex-direction: column;
    }
  }
  .btn {
    display: inline-block;
    border: 2px solid var(--primary);
    color: var(--primary);
    padding: 10px 16px;
    margin: 20px 10px 0;
    font-weight: 500;
    display: flex; 
    flex-direction: column;
    white-space: nowrap;
    align-items: center;
    justify-content: center;
  }
  .btn:hover{
    background: var(--primary-opaque);
    box-shadow: var(--button-box-shadow);
  }

  @media(max-width: 320px){
    .btn{
      display: flex; 
      flex-direction: row;
    }
  }
  
  .name{
      display: inline-block;
      font-weight: 400;
      color: var(--primary);
      font-size: clamp(20px, 5vw, 24px);
  }
.meow{
  z-index: -1;
  position: absolute;
  top:  10px;
}

.headingDescription{
  color:var(--light-gray);
  margin: 20px 0 0;
  max-width: 100vw;
}

